# pfas-literature-rag

./: .gitignore  README.md  pyproject.toml
data/eval/: adaptive_questions.yaml  pfas_questions.yaml
docs/: auditing.md  evaluation.md  integrations.md
notebooks/: pfas_rag_demo.ipynb
reports/: adaptive_comparison.md  evaluation_summary.md
src/pfas_lit_rag/: __init__.py  adaptive.py  adaptive_evaluation.py  answering.py  api.py  audit.py  chunking.py  config.py  corpus_report.py  document_manifest.py  embeddings.py  evaluation.py  ingestion.py  langchain_adapter.py  lexical_search.py  literature_search.py  ollama_client.py  pdf_downloader.py  pdfs.py  reranking.py  retrieval.py  schemas.py  vector_store.py
src/pfas_lit_rag/cli/: audit.py  collect.py  compare.py  corpus_report.py  evaluate.py  ingest.py  query.py
tests/: test_adaptive.py  test_adaptive_evaluation.py  test_answering.py  test_api.py  test_audit.py  test_audit_cli.py  test_chunking.py  test_corpus_report.py  test_document_manifest.py  test_evaluation.py  test_langchain_adapter.py  test_literature_search.py  test_pdf_downloader.py  test_pdfs.py  test_reranking.py  test_retrieval.py  test_vector_store.py
