[project]
name = "pfas-lit-rag"
version = "0.1.0"
description = "Local RAG assistant for PFAS and scientific technical literature."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "pypdf>=4.2.0",
    "fastembed>=0.4.0",
    "faiss-cpu>=1.8.0",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
pfas-collect = "pfas_lit_rag.cli.collect:app"
pfas-ingest = "pfas_lit_rag.cli.ingest:app"
pfas-query = "pfas_lit_rag.cli.query:app"
pfas-api = "pfas_lit_rag.api:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pfas_lit_rag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
